# feedback_widget

./: .gitignore  COMMERCIAL.md  README.md  pyproject.toml
feedback_widget/: hooks.py  modules.txt  notifier.py
feedback_widget/api/: feedback.py
feedback_widget/feedback_widget/doctype/feedback_comment/: feedback_comment.json  feedback_comment.py
feedback_widget/public/js/: feedback_widget.bundle.js  feedback_widget_core.js
